--- a/microsoft-hackaton-project/package.json
+++ b/microsoft-hackaton-project/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.69.5"
+  },
+  "devDependencies": {
+    "microsoft-cognitiveservices-speech-sdk": "^1.33.1"
   }
 }
