--- a/microsoft-hackaton-project/package.json
+++ b/microsoft-hackaton-project/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
