--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "file-saver": "^2.0.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "microsoft-cognitiveservices-speech-sdk": "^1.33.1"
